automatically backed up by learn

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,6 +1,6 @@
 <ul>
   <li>
-    <%=@songs.each do |song| %>
+    <% @song.each do |song| %>
       <%= link_to song.artist.name + " - " + song.title, song_path(song) %>
     <% end %>
   </li>
